[package]
name = "atomic_once_cell"
version = "0.1.6"
edition = "2021"
authors = ["Eivind Alexander Bergem <eivind.bergem@gmail.com>"]
license = "MPL-2.0"
description = "Thread-safe and lock-free OnceCell and Lazy"
repository = "https://github.com/rustne-kretser/atomic_once_cell"
readme = "README.md"
categories = ["no-std", "concurrency"]
keywords = ["lock-free", "no_std", "non-blocking", "atomic"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
atomic-polyfill = "1.0.2"
crossbeam-utils = { version = "0.8.15", default-features = false }
serde = { version = "1.0.171", optional = true }

[target.'cfg(loom)'.dependencies]
loom =  "0.7.0"

[dev-dependencies]
serde_json = "1.0.104"

[features]
default = []
serde = ["dep:serde"]
