[package]
name = "atomic_once_cell"
version = "0.2.0"
edition = "2021"
authors = ["Eivind Alexander Bergem <eivind.bergem@gmail.com>"]
license = "MPL-2.0"
description = "Thread-safe and lock-free OnceCell and Lazy"
repository = "https://github.com/rustne-kretser/atomic_once_cell"
readme = "README.md"
categories = ["no-std", "concurrency"]
keywords = ["lock-free", "no_std", "non-blocking", "atomic"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
portable-atomic = "1"
crossbeam-utils = { version = "0.8.15", default-features = false, optional = true }
serde = { version = "1.0.171", optional = true }

[target.'cfg(loom)'.dependencies]
loom =  "0.7.0"

[dev-dependencies]
serde_json = "1.0.104"

[features]
default = ["crossbeam"]
crossbeam = ["dep:crossbeam-utils"]
serde = ["dep:serde"] 
